Fixed spacing on decafSum

--- a/src/DecafSum.css
+++ b/src/DecafSum.css
@@ -1,7 +1,7 @@
 .Summary {
     margin-top: 10%;
     margin-right: 10%;
-    margin-left: 1%;
+    margin-left: 5%;
     margin-bottom: 5%;
     font-family: Andale Mono, monospace;
     /* background-color: white; */
@@ -9,12 +9,14 @@
 
 h1 {
     display: block;
-    margin-bottom: -3%;
+    text-align: center;
+    margin-bottom: 2%;
     /* line-height: 1.6; */
 }
 
 h2 {
     font-size: 100%;
+    text-align: center;
 }
 
 p {
@@ -25,6 +27,7 @@ p {
 
 img {
     max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 250px;
     border-radius: 8px;
   }
